# Kaleidoscope

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: KaleidoscopeJIT.cpp  KaleidoscopeJIT.h  ast.cpp  ast.h  common.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
